tests/paczka1/fuzzy1/75643126.err
Error in line 9: itf A534 80,8
Error in line 6: 9HnN4RwCY3 A534 23,7
Error in line 16: 9HnN4RwCY3 S461 61,0
Error in line 30: m7pMc7V59j S1 64,26
Error in line 35: U55Yp03r A862 46,5
Error in line 28: MR4Va7J S1 9,6
